--- a/Dashboard.App/Layout/LoginDisplay.razor
+++ b/Dashboard.App/Layout/LoginDisplay.razor
@@ -7,7 +7,8 @@
         <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <span class="d-flex"/>
+        <a class="btn btn-link" href="authentication/login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
 
