--- a/Dashboard.App/Layout/NavMenu.razor
+++ b/Dashboard.App/Layout/NavMenu.razor
@@ -16,7 +16,13 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <AuthorizeView>
+                <NavLink class="nav-link" href="accounts">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Accounts
+                </NavLink>
+            </AuthorizeView>
+        </div>
         <div class="nav-item px-3">
             <AuthorizeView Roles="Advanced">
                 <NavLink class="nav-link" href="currency-exchanges">
