--- a/Dashboard.App/Layout/NavMenu.razor
+++ b/Dashboard.App/Layout/NavMenu.razor
@@ -30,6 +30,9 @@
                 </NavLink>
             </AuthorizeView>
         </div>
+       <div class="nav-item px-3">
+        <ThemeSwitcher />
+        </div>
     </nav>
 </div>
 
