--- a/Dashboard.App/Pages/CurrencyExchanges.razor
+++ b/Dashboard.App/Pages/CurrencyExchanges.razor
@@ -18,8 +18,8 @@ else
     <AuthorizeView Roles="Advanced">
         <div class="container-fluid">
             <div class="row mb-3">
-                <div class="col-2">
-                   <InputSelect style="width: 100%;" @bind-Value="Model.ExchangeType"
+                <div class="col-3">
+                   <InputSelect class="bg-dark" style="width: 100%; color: #efe" @bind-Value="Model.ExchangeType"
                     @bind-Value:after="OnQueryChangedAsync"
                     DisplayName="Exchange Types">
                     <option>--Select--</option>
@@ -29,8 +29,8 @@ else
                     }
                 </InputSelect>
                 </div>
-                <div class="col-4">
-                    <InputDate @bind-Value="Model.FilterDate"  @bind-Value:after="OnQueryChangedAsync" Placeholder="Select Date" />
+                <div class="col-3">
+                    <InputDate @bind-Value="Model.FilterDate"  class="bg-dark" style="color: #efe" @bind-Value:after="OnQueryChangedAsync" Placeholder="Select Date" />
                 </div>
                 <div class="col-6">
                     <span />
