--- a/Dashboard.App/wwwroot/css/app.css
+++ b/Dashboard.App/wwwroot/css/app.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Consolas, monospace;
 }
 
 h1:focus {
