--- a/Dashboard.App/Layout/LoginDisplay.razor
+++ b/Dashboard.App/Layout/LoginDisplay.razor
@@ -15,6 +15,6 @@
 @code{
     public void BeginLogOut()
     {
-        Navigation.NavigateToLogout("authentication/logout");
+        Navigation.NavigateToLogout("authentication/logout", "./");
     }
 }
