--- a/Dashboard.App/Components/BankAccountCard.razor
+++ b/Dashboard.App/Components/BankAccountCard.razor
@@ -1,20 +1,14 @@
 ﻿@using Dashboard.App.Models
-<div class="card m-3">
-    <div class="card-header">
-        <h5 class="card-title">
+<Card Class="my-2">
+    <CardHeader Color="CardColor.Success">
             @(AccountDto?.AccountRef ?? "Unknown...")
-        </h5>
-    </div>
-    <div class="card-body">
-            <div class="row">
-                <div class="col-6">
-                    <p class="card-text">Account Number: @AccountDto?.AccountId</p>
-                    <p class="card-text">Account Type: @AccountDto?.AccountType</p>
-                    <p class="card-text">Balance: @AccountDto?.TotalBalance [@AccountDto?.Currency]</p>
-                </div>
-            </div>
-    </div>
-</div>
+    </CardHeader>
+    <CardBody>
+        <p class="card-text">Account Number: @AccountDto?.AccountId</p>
+        <p class="card-text">Account Type: @AccountDto?.AccountType</p>
+        <p class="card-text">Balance: @AccountDto?.TotalBalance [@AccountDto?.Currency]</p>
+    </CardBody>
+</Card>
 
 
 
