--- a/Dashboard.App/_Imports.razor
+++ b/Dashboard.App/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Dashboard.App
-@using Dashboard.App.Layout
+@using global::Dashboard.App
+@using global::Dashboard.App.Layout
 @using BlazorBootstrap
