--- a/Dashboard.App/Components/CurrencyExchangeNew.razor
+++ b/Dashboard.App/Components/CurrencyExchangeNew.razor
@@ -1,9 +1,13 @@
-﻿@using BlazorBootstrap
+﻿@namespace Dashboard.App.Components
+
+@using BlazorBootstrap
 @using Dashboard.App.Models
+@using Microsoft.AspNetCore.Components.Forms
+@using SavingsOnDapr.Dashboard.Client.Models
 @inject HttpClient Http
 
 <div class="row my-3">
-    <InputSelect @bind-Value="DebtorAccountRef" @bind-Value:after="OnDebtorChanged"
+    <InputSelect @bind-Value="State.DebtorAccountRef" @bind-Value:after="OnDebtorChanged"
     DisplayName="Debtor">
         <option value="">--Select--</option>
         @foreach (var acc in BankAccounts.Where(a => a.TotalBalance > 0m))
@@ -14,18 +18,18 @@
 </div>
 <div class="row my-3">
     <label class="form-label">Enter Source Amount</label>
-    <RangeInput Disabled=@(string.IsNullOrEmpty(DebtorAccountRef)) TValue="int" @bind-Value="MaxAmountPercentage" @bind-Value:after="OnMaxAmountPercentageChanged" Min=" 1" Max="100" />
-    <CurrencyInput Disabled=@(string.IsNullOrEmpty(DebtorAccountRef)) HideCurrencySymbol=true TValue="decimal" @bind-Value="@SourceAmount" @bind-Value:after="OnSourceAmountChanged"/>
+    <RangeInput Disabled=@(string.IsNullOrEmpty(State.DebtorAccountRef)) TValue="int" @bind-Value="State.MaxAmountPercentage" @bind-Value:after="OnMaxAmountPercentageChanged" Min=" 1" Max="100" />
+    <CurrencyInput Disabled=@(string.IsNullOrEmpty(State.DebtorAccountRef)) HideCurrencySymbol=true TValue="decimal" @bind-Value="State.SourceAmount" @bind-Value:after="OnSourceAmountChanged"/>
 </div>
 
 <div class="row mb-3">
-    @if (string.IsNullOrEmpty(DebtorAccountRef))
+    @if (string.IsNullOrEmpty(State.DebtorAccountRef))
     {
         <label class="form-label">Select debtor first</label>
     }
     else
     {
-        <InputSelect @ref="BeneficiarySelect" @bind-Value="BeneficiaryAccountRef" @bind-Value:after="OnBeneficiaryChanged" DisplayName="Beneficiary">
+        <InputSelect @ref="BeneficiarySelect" @bind-Value="State.BeneficiaryAccountRef" @bind-Value:after="OnBeneficiaryChanged" DisplayName="Beneficiary">
             @foreach (var acc in BeneficiaryAccounts)
             {
                 <option value=@acc.AccountRef>@acc.AccountRef [@acc.Currency]</option>
@@ -36,62 +40,61 @@
 </div>
 
 <div class="row mb-3">
-    <label class="form-label">You'll receive: @(TargetAmount == 0m ? "--" : $"{TargetAmount}")</label>
+    <label class="form-label">You'll receive: @(State.TargetAmount == 0m ? "--" : $"{State.TargetAmount}")</label>
+</div>
+<div class="row mb-3">
+    <InputSelect @bind-Value="OrderType" DisplayName="Order Type">
+        <option value="">--Select--</option>
+        @foreach (var ot in OrderTypes)
+        {
+            <option value=@ot>@ot</option>
+        }
+    </InputSelect>
 </div>
 
-
 <div class="row my-4">
-    <Button Color="ButtonColor.Success" Disabled=@(Order is null) @onclick="ConfirmedAsync">Confirm</Button>
+    <Button Color="ButtonColor.Success" Disabled=@(State.Order is null) @onclick="ConfirmedAsync">Confirm</Button>
 </div>
 
 
 @code {
 
-    private string? DebtorAccountRef { get; set; } = default;
-    private string? BeneficiaryAccountRef { get; set; } = default;
-    private BankAccountDto? DebtorAccount { get; set; } = default;
-    private BankAccountDto? BeneficiaryAccount { get; set; } = default;
-
-    private decimal SourceAmount { get; set; } = default;
-    private decimal TargetAmount { get; set; } = default;
-
-    private SemaphoreSlim RatesSemaphore { get; set; } = new SemaphoreSlim(1, 1);
-    private bool IsRatesFetchingScheduled { get; set; } = false;
-    private Timer? RateRefreshTimer = default;
-
-    private CurrencyExchangeResponse? ExchangeResponse { get; set; } = default;
-
-    private decimal MaxAmount { get; set; } = default;
-    private int MaxAmountPercentage { get; set; } = default;
-
-    private CurrencyExchangeOrderSummary? Order { get; set; }
-
-    private InputSelect<string> BeneficiarySelect = default!;
 
     [Parameter] public EventCallback<CurrencyExchangeOrderSummary> OnClickCallback { get; set; }
 
     [Parameter] public ICollection<BankAccountDto> BankAccounts { get; set; } = Enumerable.Empty<BankAccountDto>().ToList();
 
+    private readonly SemaphoreSlim _ratesSemaphore = new SemaphoreSlim(1, 1);
+    
+    private readonly ModalState State = new ModalState();
+
+    private InputSelect<string> BeneficiarySelect = default!;
+
     private ICollection<BankAccountDto> BeneficiaryAccounts { get; set; } = Enumerable.Empty<BankAccountDto>().ToList();
 
+    private ExchangeOrderType OrderType { get; set; } = ExchangeOrderType.MarketRate;
+
+    private readonly ExchangeOrderType[] OrderTypes = Enum.GetValues(typeof(ExchangeOrderType)).Cast<ExchangeOrderType>().ToArray();
+
+    private Timer? RateRefreshTimer = default;
 
     protected void OnDebtorChanged()
     {
-        SourceAmount = 0m;
-        TargetAmount = 0m;
-        if (DebtorAccountRef is not null)
+        State.SourceAmount = 0m;
+        State.TargetAmount = 0m;
+        if (State.DebtorAccountRef is not null)
         {
-            DebtorAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == DebtorAccountRef);
-            if (DebtorAccount is not null)
+            State.DebtorAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == State.DebtorAccountRef);
+            if (State.DebtorAccount is not null)
             {
-                MaxAmount = DebtorAccount.TotalBalance;
-                BeneficiaryAccounts = BankAccounts.Where(x => x.AccountRef != DebtorAccountRef).ToList();
-                BeneficiaryAccountRef = BeneficiaryAccounts.FirstOrDefault()?.AccountRef;
-                BeneficiaryAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == BeneficiaryAccountRef);
+                State.MaxAmount = State.DebtorAccount.TotalBalance;
+                BeneficiaryAccounts = BankAccounts.Where(x => x.AccountRef != State.DebtorAccountRef).ToList();
+                State.BeneficiaryAccountRef = BeneficiaryAccounts.FirstOrDefault()?.AccountRef;
+                State.BeneficiaryAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == State.BeneficiaryAccountRef);
             }
             else 
             {
-                DebtorAccountRef = null;
+                State.DebtorAccountRef = null;
             }
         }
         StateHasChanged();
@@ -99,28 +102,28 @@
 
     protected void OnBeneficiaryChanged()
     {
-        TargetAmount = 0m;
-        BeneficiaryAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == BeneficiaryAccountRef);
+        State.TargetAmount = 0m;
+        State.BeneficiaryAccount = BankAccounts.FirstOrDefault(x => x.AccountRef == State.BeneficiaryAccountRef);
 
         StateHasChanged();
     }
 
     protected async Task OnSourceAmountChanged()
     {
-        TargetAmount = 0m;
-        if (SourceAmount > 0 && DebtorAccount is not null && BeneficiaryAccount is not null)
+        State.TargetAmount = 0m;
+        if (State.SourceAmount > 0 && State.DebtorAccount is not null && State.BeneficiaryAccount is not null)
         {
-            Order = new CurrencyExchangeOrderSummary(DebtorAccountRef, BeneficiaryAccountRef, SourceAmount);
-            CalculateTargetAmount(DebtorAccount!.Currency, BeneficiaryAccount!.Currency);
+            State.Order = new CurrencyExchangeOrderSummary(State.DebtorAccountRef, State.BeneficiaryAccountRef, State.SourceAmount);
+            CalculateTargetAmount(State.DebtorAccount!.Currency, State.BeneficiaryAccount!.Currency);
         }
         else
         {
-            Order = null;
+            State.Order = null;
         }
 
         StateHasChanged();
 
-        if (SourceAmount > 0)
+        if (State.SourceAmount > 0)
         {
             await OnRatesRequestedAsync();
         }
@@ -128,78 +131,105 @@
 
     protected async Task OnMaxAmountPercentageChanged()
     {
-        if (MaxAmountPercentage > 0)
+        if (State.MaxAmountPercentage > 0)
         {
-            SourceAmount = Math.Round(MaxAmount * MaxAmountPercentage / 100, 2, MidpointRounding.AwayFromZero);
+            State.SourceAmount = Math.Round(State.MaxAmount * State.MaxAmountPercentage / 100, 2, MidpointRounding.AwayFromZero);
             await OnSourceAmountChanged();
         }
     }
 
     protected async Task OnRatesRequestedAsync()
     {
-        if (IsRatesFetchingScheduled)
+        if (State.IsRatesFetchingScheduled)
         {
             return;
         }
 
-        await RatesSemaphore.WaitAsync();
-        if (!IsRatesFetchingScheduled)
+        await _ratesSemaphore.WaitAsync();
+        if (!State.IsRatesFetchingScheduled)
         {
-            IsRatesFetchingScheduled = true;
-            if (ExchangeResponse is null || ExchangeResponse.Timestamp < DateTime.UtcNow.AddSeconds(-5))
+            State.IsRatesFetchingScheduled = true;
+            if (State.ExchangeResponse is null || State.ExchangeResponse.Timestamp < DateTime.UtcNow.AddSeconds(-5))
             {
                 RateRefreshTimer = new Timer(async _ => await FetchRatesAsync(), null, 0, Timeout.Infinite);
             }
             else
             {
-                var dt = (DateTime.UtcNow - ExchangeResponse!.Timestamp.ToUniversalTime());
+                var dt = (DateTime.UtcNow - State.ExchangeResponse.Timestamp.ToUniversalTime());
                 Console.WriteLine($"Rates Query scheduled in {5000 - (int)dt.TotalMilliseconds} ms...");
-                RateRefreshTimer.Change(5000 - (int)dt.TotalMilliseconds, Timeout.Infinite);
+
+                if (RateRefreshTimer is null)
+                {
+                    RateRefreshTimer = new Timer(async _ => await FetchRatesAsync(), null, 5000 - (int)dt.TotalMilliseconds, Timeout.Infinite);
+                }
+                else
+                {
+                    RateRefreshTimer.Change(5000 - (int)dt.TotalMilliseconds, Timeout.Infinite);
+                }
             }
         }
-        RatesSemaphore.Release();
+        _ratesSemaphore.Release();
     }
 
     protected async Task FetchRatesAsync()
     {
-        if (DebtorAccount is not null && BeneficiaryAccount is not null && SourceAmount > 0m)
+        if (State.DebtorAccount is not null && State.BeneficiaryAccount is not null && State.SourceAmount > 0m)
         {
-            Console.WriteLine($"Rates Query sent for SourceAmount = {SourceAmount}");
+            Console.WriteLine($"Rates Query sent for SourceAmount = {State.SourceAmount}");
             var res = await Http.PostAsJsonAsync<ExchangeRateQuery>(
                         $"/api/currency/exchange-query",
-                        new ExchangeRateQuery(DebtorAccount!.Currency, BeneficiaryAccount!.Currency, SourceAmount));
+                        new ExchangeRateQuery(State.DebtorAccount!.Currency, State.BeneficiaryAccount!.Currency, State.SourceAmount));
 
             if (res.IsSuccessStatusCode)
             {
-                ExchangeResponse = await res.Content.ReadFromJsonAsync<CurrencyExchangeResponse>();
+                State.ExchangeResponse = await res.Content.ReadFromJsonAsync<CurrencyExchangeResponse>();
 
-                if (ExchangeResponse is not null)
+                if (State.ExchangeResponse is not null)
                 {
-                    ExchangeResponse = ExchangeResponse with { Timestamp = DateTime.UtcNow };
+                    State.ExchangeResponse = State.ExchangeResponse with { Timestamp = DateTime.UtcNow };
 
-                    CalculateTargetAmount(DebtorAccount!.Currency, BeneficiaryAccount!.Currency);
+                    CalculateTargetAmount(State.DebtorAccount!.Currency, State.BeneficiaryAccount!.Currency);
                     StateHasChanged();
                 }
             }
         }
 
-        await RatesSemaphore.WaitAsync();
-        IsRatesFetchingScheduled = false;
-        RatesSemaphore.Release();
+        await _ratesSemaphore.WaitAsync();
+        State.IsRatesFetchingScheduled = false;
+        _ratesSemaphore.Release();
     }
 
     protected async Task ConfirmedAsync(EventArgs e)
     {
-        await OnClickCallback.InvokeAsync(Order);
+        await OnClickCallback.InvokeAsync(State.Order);
     }
 
     protected void CalculateTargetAmount(string sourceCurrency, string targetCurrency)
     {
-        if (ExchangeResponse is not null && 
-            ExchangeResponse.ExchangeType.StartsWith(sourceCurrency) &&
-            ExchangeResponse.ExchangeType.EndsWith(targetCurrency))
+        if (State.ExchangeResponse is not null && 
+            State.ExchangeResponse.ExchangeType.StartsWith(sourceCurrency) &&
+            State.ExchangeResponse.ExchangeType.EndsWith(targetCurrency))
         {
-            TargetAmount = Math.Round(SourceAmount * ExchangeResponse.Rate, 2, MidpointRounding.ToEven);
+            State.TargetAmount = Math.Round(State.SourceAmount * State.ExchangeResponse.Rate, 2, MidpointRounding.ToEven);
         }
+    }
+
+    public class ModalState
+    {
+        public string? DebtorAccountRef { get; set; } = default;
+        public string? BeneficiaryAccountRef { get; set; } = default;
+        public BankAccountDto? DebtorAccount { get; set; } = default;
+        public BankAccountDto? BeneficiaryAccount { get; set; } = default;
+        public decimal SourceAmount { get; set; } = default;
+        public decimal TargetAmount { get; set; } = default;
+
+        public bool IsRatesFetchingScheduled { get; set; } = false;
+
+        public CurrencyExchangeOrderSummary? Order { get; set; }
+        public CurrencyExchangeResponse? ExchangeResponse { get; set; } = default;
+
+        public decimal MaxAmount { get; set; } = default;
+        public int MaxAmountPercentage { get; set; } = default;
+
     }
 }
